--- a/frontend/src/assets/css/material-dashboard.css
+++ b/frontend/src/assets/css/material-dashboard.css
@@ -10027,7 +10027,7 @@ a.text-dark:focus {
   color: #fff;
   background-color: #ea2c6d;
   border-color: #b8124a;
-  box-shadow: 0 2px 2px 0 rgba(233, 30, 99, 0.14), 0 3px 1px -2px rgba(233, 30, 99, 0.2), 0 1px 5px 0 rgba(233, 30, 99, 0.12);
+  /*box-shadow: 0 2px 2px 0 rgba(233, 30, 99, 0.14), 0 3px 1px -2px rgba(233, 30, 99, 0.2), 0 1px 5px 0 rgba(233, 30, 99, 0.12);*/
 }
 
 .btn.btn-rose:active:hover,
@@ -10070,11 +10070,11 @@ a.text-dark:focus {
   border-color: #e91e63;
 }
 
-.btn.btn-rose:focus,
-.btn.btn-rose:active,
-.btn.btn-rose:hover {
-  box-shadow: 0 14px 26px -12px rgba(233, 30, 99, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(233, 30, 99, 0.2);
-}
+/*.btn.btn-rose:focus,*/
+/*.btn.btn-rose:active,*/
+/*.btn.btn-rose:hover {*/
+/*  box-shadow: 0 14px 26px -12px rgba(233, 30, 99, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(233, 30, 99, 0.2);*/
+/*}*/
 
 .btn.btn-rose.btn-link {
   background-color: transparent;
@@ -10089,20 +10089,20 @@ a.text-dark:focus {
   color: #e91e63;
 }
 
-.btn,
-.btn.btn-default {
-  color: #fff;
-  background-color: #999999;
-  border-color: #999999;
-  box-shadow: 0 2px 2px 0 rgba(153, 153, 153, 0.14), 0 3px 1px -2px rgba(153, 153, 153, 0.2), 0 1px 5px 0 rgba(153, 153, 153, 0.12);
-}
+/*.btn,*/
+/*.btn.btn-default {*/
+/*  color: #fff;*/
+/*  background-color: #999999;*/
+/*  border-color: #999999;*/
+/*  box-shadow: 0 2px 2px 0 rgba(153, 153, 153, 0.14), 0 3px 1px -2px rgba(153, 153, 153, 0.2), 0 1px 5px 0 rgba(153, 153, 153, 0.12);*/
+/*}*/
 
-.btn:hover,
-.btn.btn-default:hover {
-  color: #fff;
-  background-color: #919191;
-  border-color: #7a7a7a;
-}
+/*.btn:hover,*/
+/*.btn.btn-default:hover {*/
+/*  color: #fff;*/
+/*  background-color: #919191;*/
+/*  border-color: #7a7a7a;*/
+/*}*/
 
 .btn:focus,
 .btn.focus,
@@ -10126,7 +10126,7 @@ a.text-dark:focus {
   color: #fff;
   background-color: #919191;
   border-color: #7a7a7a;
-  box-shadow: 0 2px 2px 0 rgba(153, 153, 153, 0.14), 0 3px 1px -2px rgba(153, 153, 153, 0.2), 0 1px 5px 0 rgba(153, 153, 153, 0.12);
+  /*box-shadow: 0 2px 2px 0 rgba(153, 153, 153, 0.14), 0 3px 1px -2px rgba(153, 153, 153, 0.2), 0 1px 5px 0 rgba(153, 153, 153, 0.12);*/
 }
 
 .btn:active:hover,
@@ -10195,7 +10195,7 @@ a.text-dark:focus {
 .btn.btn-default:focus,
 .btn.btn-default:active,
 .btn.btn-default:hover {
-  box-shadow: 0 14px 26px -12px rgba(153, 153, 153, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(153, 153, 153, 0.2);
+  /*box-shadow: 0 14px 26px -12px rgba(153, 153, 153, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(153, 153, 153, 0.2);*/
 }
 
 .btn.btn-link,
@@ -16333,7 +16333,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   color: #fff;
   background-color: #f44336;
   border-color: #f44336;
-  box-shadow: 0 2px 2px 0 rgba(244, 67, 54, 0.14), 0 3px 1px -2px rgba(244, 67, 54, 0.2), 0 1px 5px 0 rgba(244, 67, 54, 0.12);
+  /*box-shadow: 0 2px 2px 0 rgba(244, 67, 54, 0.14), 0 3px 1px -2px rgba(244, 67, 54, 0.2), 0 1px 5px 0 rgba(244, 67, 54, 0.12);*/
 }
 
 .fixed-plugin .btn.btn-danger:hover {
@@ -16357,7 +16357,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   color: #fff;
   background-color: #f33527;
   border-color: #e11b0c;
-  box-shadow: 0 2px 2px 0 rgba(244, 67, 54, 0.14), 0 3px 1px -2px rgba(244, 67, 54, 0.2), 0 1px 5px 0 rgba(244, 67, 54, 0.12);
+  /*box-shadow: 0 2px 2px 0 rgba(244, 67, 54, 0.14), 0 3px 1px -2px rgba(244, 67, 54, 0.2), 0 1px 5px 0 rgba(244, 67, 54, 0.12);*/
 }
 
 .fixed-plugin .btn.btn-danger:active:hover,
@@ -16400,11 +16400,11 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   border-color: #f44336;
 }
 
-.fixed-plugin .btn.btn-danger:focus,
-.fixed-plugin .btn.btn-danger:active,
-.fixed-plugin .btn.btn-danger:hover {
-  box-shadow: 0 14px 26px -12px rgba(244, 67, 54, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(244, 67, 54, 0.2);
-}
+/*.fixed-plugin .btn.btn-danger:focus,*/
+/*.fixed-plugin .btn.btn-danger:active,*/
+/*.fixed-plugin .btn.btn-danger:hover {*/
+/*  box-shadow: 0 14px 26px -12px rgba(244, 67, 54, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(244, 67, 54, 0.2);*/
+/*}*/
 
 .fixed-plugin .btn.btn-danger.btn-link {
   background-color: transparent;
@@ -17574,7 +17574,7 @@ html[dir="rtl"] .form-check .form-check-sign .check:before {
 .card .card-header-danger .card-icon,
 .card .card-header-danger:not(.card-header-icon):not(.card-header-text),
 .card .card-header-danger .card-text {
-  box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);
+  /*box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);*/
 }
 
 .card .card-header-rose .card-icon,
@@ -17583,11 +17583,11 @@ html[dir="rtl"] .form-check .form-check-sign .check:before {
   box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(233, 30, 99, 0.4);
 }
 
-.card .card-header-warning .card-icon,
-.card .card-header-warning:not(.card-header-icon):not(.card-header-text),
-.card .card-header-warning .card-text {
-  box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(255, 152, 0, 0.4);
-}
+/*.card .card-header-warning .card-icon,*/
+/*.card .card-header-warning:not(.card-header-icon):not(.card-header-text),*/
+/*.card .card-header-warning .card-text {*/
+/*  box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(255, 152, 0, 0.4);*/
+/*}*/
 
 .card .card-header-info .card-icon,
 .card .card-header-info:not(.card-header-icon):not(.card-header-text),
