--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -10,8 +10,8 @@
           <div class="col-6">
             <div class="d-flex justify-content-end align-items-end">
               <div>
-                <mat-paginator [length]="books.length" [pageSize]="10" [pageSizeOptions]="[5,10,20]"
-                               aria-label="Select page">
+                <mat-paginator [length]="totalRecords" [pageSize]="5" [pageSizeOptions]="[5,10,20]"
+                               (page)="onPageChange($event)" aria-label="Select page">
                 </mat-paginator>
               </div>
               <div>
