--- a/frontend/src/assets/css/material-dashboard.css
+++ b/frontend/src/assets/css/material-dashboard.css
@@ -3586,11 +3586,15 @@ tbody.collapse.show {
   margin-left: 0;
 }
 
+.cdk-overlay-container {
+  z-index: 1050;
+}
+
 .dropdown-menu {
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 1000;
+  z-index: 1050;
   display: none;
   float: left;
   min-width: 10rem;
@@ -9803,7 +9807,7 @@ a.text-dark:focus {
 .btn.btn-success:focus,
 .btn.btn-success:active,
 .btn.btn-success:hover {
-  box-shadow: 0 14px 26px -12px rgba(76, 175, 80, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(76, 175, 80, 0.2);
+  /*box-shadow: 0 14px 26px -12px rgba(76, 175, 80, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(76, 175, 80, 0.2);*/
 }
 
 .btn.btn-success.btn-link {
@@ -9823,7 +9827,7 @@ a.text-dark:focus {
   color: #fff;
   background-color: #ff9800;
   border-color: #ff9800;
-  box-shadow: 0 2px 2px 0 rgba(255, 152, 0, 0.14), 0 3px 1px -2px rgba(255, 152, 0, 0.2), 0 1px 5px 0 rgba(255, 152, 0, 0.12);
+  /*box-shadow: 0 2px 2px 0 rgba(255, 152, 0, 0.14), 0 3px 1px -2px rgba(255, 152, 0, 0.2), 0 1px 5px 0 rgba(255, 152, 0, 0.12);*/
 }
 
 .btn.btn-warning:hover {
@@ -9847,7 +9851,7 @@ a.text-dark:focus {
   color: #fff;
   background-color: #f08f00;
   border-color: #c27400;
-  box-shadow: 0 2px 2px 0 rgba(255, 152, 0, 0.14), 0 3px 1px -2px rgba(255, 152, 0, 0.2), 0 1px 5px 0 rgba(255, 152, 0, 0.12);
+  /*box-shadow: 0 2px 2px 0 rgba(255, 152, 0, 0.14), 0 3px 1px -2px rgba(255, 152, 0, 0.2), 0 1px 5px 0 rgba(255, 152, 0, 0.12);*/
 }
 
 .btn.btn-warning:active:hover,
@@ -9893,7 +9897,7 @@ a.text-dark:focus {
 .btn.btn-warning:focus,
 .btn.btn-warning:active,
 .btn.btn-warning:hover {
-  box-shadow: 0 14px 26px -12px rgba(255, 152, 0, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(255, 152, 0, 0.2);
+  /*box-shadow: 0 14px 26px -12px rgba(255, 152, 0, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(255, 152, 0, 0.2);*/
 }
 
 .btn.btn-warning.btn-link {
@@ -9913,7 +9917,7 @@ a.text-dark:focus {
   color: #fff;
   background-color: #d9534f;
   border-color: #d9534f;
-  box-shadow: 0 2px 2px 0 rgba(244, 67, 54, 0.14), 0 3px 1px -2px rgba(244, 67, 54, 0.2), 0 1px 5px 0 rgba(244, 67, 54, 0.12);
+  /*box-shadow: 0 2px 2px 0 rgba(244, 67, 54, 0.14), 0 3px 1px -2px rgba(244, 67, 54, 0.2), 0 1px 5px 0 rgba(244, 67, 54, 0.12);*/
 }
 
 .btn.btn-danger:hover {
@@ -9937,7 +9941,7 @@ a.text-dark:focus {
   color: #fff;
   background-color: #d9534f;
   border-color: #d9534f;
-  box-shadow: 0 2px 2px 0 rgba(244, 67, 54, 0.14), 0 3px 1px -2px rgba(244, 67, 54, 0.2), 0 1px 5px 0 rgba(244, 67, 54, 0.12);
+  /*box-shadow: 0 2px 2px 0 rgba(244, 67, 54, 0.14), 0 3px 1px -2px rgba(244, 67, 54, 0.2), 0 1px 5px 0 rgba(244, 67, 54, 0.12);*/
 }
 
 .btn.btn-danger:active:hover,
@@ -9980,11 +9984,11 @@ a.text-dark:focus {
   border-color: #f44336;
 }
 
-.btn.btn-danger:focus,
-.btn.btn-danger:active,
-.btn.btn-danger:hover {
-  box-shadow: 0 14px 26px -12px rgba(244, 67, 54, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(244, 67, 54, 0.2);
-}
+/*.btn.btn-danger:focus,*/
+/*.btn.btn-danger:active,*/
+/*.btn.btn-danger:hover {*/
+/*  box-shadow: 0 14px 26px -12px rgba(244, 67, 54, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(244, 67, 54, 0.2);*/
+/*}*/
 
 .btn.btn-danger.btn-link {
   background-color: transparent;
@@ -10003,7 +10007,7 @@ a.text-dark:focus {
   color: #fff;
   background-color: #e91e63;
   border-color: #e91e63;
-  box-shadow: 0 2px 2px 0 rgba(233, 30, 99, 0.14), 0 3px 1px -2px rgba(233, 30, 99, 0.2), 0 1px 5px 0 rgba(233, 30, 99, 0.12);
+  /*box-shadow: 0 2px 2px 0 rgba(233, 30, 99, 0.14), 0 3px 1px -2px rgba(233, 30, 99, 0.2), 0 1px 5px 0 rgba(233, 30, 99, 0.12);*/
 }
 
 .btn.btn-rose:hover {
@@ -17028,10 +17032,12 @@ a .material-icons {
 
 .form-check,
 label {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.42857;
-  color: #AAAAAA;
+  color: #000000;
   font-weight: 100;
+  font-weight: bolder;
+
 }
 
 /*           Animations              */
