--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -33,7 +33,7 @@
                 <label>Select field: </label>
                 <mat-form-field appearance="fill">
                   <mat-label>Field</mat-label>
-                  <mat-select ngModel name="filteringField">
+                  <mat-select ngModel name="filteringField" required>
                     <mat-option *ngFor="let type of fieldTypes" [value]="type">
                       {{FieldType2LabelMapping[type]}}
                     </mat-option>
@@ -42,7 +42,7 @@
                 <label>Select operator: </label>
                 <mat-form-field appearance="fill">
                   <mat-label>Operator:</mat-label>
-                  <mat-select ngModel name="filteringOperator">
+                  <mat-select ngModel name="filteringOperator" required>
                     <mat-option *ngFor="let operator of filterOperators" [value]="operator">
                       {{FilterOperator2LabelMapping[operator]}}
                     </mat-option>
@@ -51,7 +51,7 @@
                 <label>Input value: </label>
                 <mat-form-field appearance="fill">
                   <mat-label>Input</mat-label>
-                  <input matInput ngModel name="filteringValue">
+                  <input matInput ngModel name="filteringValue" required>
                 </mat-form-field>
                 <button [disabled]="filterForm.invalid" type="submit" class="btn btn-success">Filter</button>
               </form>
