--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -10,7 +10,7 @@
           <div class="col-6">
             <div class="d-flex justify-content-end align-items-end">
               <div>
-                <mat-paginator [length]="totalRecords" [pageSize]="5" [pageSizeOptions]="[5,10,20]"
+                <mat-paginator #matPaginator [length]="totalRecords" [pageSize]="5" [pageSizeOptions]="[5,10,20]"
                                (page)="onPageChange($event)" aria-label="Select page">
                 </mat-paginator>
               </div>
