--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -9,15 +9,47 @@
           </div>
           <div class="col-8">
             <div class="d-flex justify-content-end align-items-end">
-              <mat-paginator [length]="totalRecords" [pageSize]="5" [pageSizeOptions]="[5,10,20]"
+              <mat-paginator #matPaginator [length]="totalRecords" [pageSize]="5" [pageSizeOptions]="[5,10,20]"
                              (page)="onPageChange($event)" aria-label="Select page">
               </mat-paginator>
-              <div>
-                <button class="btn btn-info" data-toggle="modal" data-target="#searchAuthorModal">SEARCH</button>
-              </div>
             </div>
           </div>
         </div>
+        <mat-expansion-panel hideToggle>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Filter by:
+            </mat-panel-title>
+            <mat-panel-description>
+              Parameters for filtering
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <div>
+            <form #filterForm="ngForm" (ngSubmit)="filterAuthors(filterForm.value)">
+              <label>First name: </label>
+              <mat-form-field appearance="fill">
+                <input matInput ngModel name="filterValue" required>
+                <input hidden ngModel="{{FieldType2LabelMapping.AUTHOR_FIRST_NAME}}" name="filterBy">
+              </mat-form-field>
+
+              <label>Second name: </label>
+              <mat-form-field appearance="fill">
+                <input matInput ngModel name="filterValue" required>
+                <input hidden ngModel="{{FieldType2LabelMapping.AUTHOR_SECOND_NAME}}" name="filterBy">
+              </mat-form-field>
+
+              <label>Rating: </label>
+              <mat-form-field appearance="fill">
+                <input matInput ngModel name="filterValue" required>
+                <input hidden ngModel="{{FieldType2LabelMapping.RATING}}" name="filterBy">
+              </mat-form-field>
+
+              <button [disabled]="filterForm.invalid" type="submit" class="btn btn-success">Filter</button>
+              <button type="button" (click)="resetForm(filterForm)" class="btn btn-primary">Reset</button>
+            </form>
+          </div>
+
+        </mat-expansion-panel>
         <div class="col-12">
           <div class="card">
             <div class="card-header card-header-warning">
@@ -29,10 +61,23 @@
                 <th id="checkBox">
                   <input class="form-check-inline" type="checkbox" value="" id="checkAll">Mark all
                 </th>
-                <th id="tableId">ID</th>
-                <th id="tableName">Name</th>
-                <th id="tableSecondName">Second Name</th>
-                <th id="tableRating">Rating</th>
+                <th (click)="sortByColumn('firstName')" id="tableName">First Name
+                  <em *ngIf="sortParameters.sortBy === 'firstName' && sortParameters.reverse"
+                      class="fa fa-sort-asc"></em>
+                  <em *ngIf="sortParameters.sortBy != 'firstName'" class="fa fa-sort"></em>
+                  <em *ngIf="sortParameters.sortBy === 'firstName' && !sortParameters.reverse"
+                      class="fa fa-sort-desc"></em></th>
+                <th (click)="sortByColumn('secondName')" id="tableSecondName">Second Name
+                  <em *ngIf="sortParameters.sortBy === 'secondName' && sortParameters.reverse"
+                      class="fa fa-sort-asc"></em>
+                  <em *ngIf="sortParameters.sortBy != 'secondName'" class="fa fa-sort"></em>
+                  <em *ngIf="sortParameters.sortBy === 'secondName' && !sortParameters.reverse"
+                      class="fa fa-sort-desc"></em></th>
+                <th (click)="sortByColumn('rating')" id="tableRating">Rating
+                  <em *ngIf="sortParameters.sortBy === 'rating' && sortParameters.reverse" class="fa fa-sort-asc"></em>
+                  <em *ngIf="sortParameters.sortBy != 'rating'" class="fa fa-sort"></em>
+                  <em *ngIf="sortParameters.sortBy === 'rating' && !sortParameters.reverse"
+                      class="fa fa-sort-desc"></em></th>
                 </thead>
                 <tbody>
                 <tr *ngFor="let author of authors">
@@ -41,7 +86,6 @@
                       <input class="form-check-inline" type="checkbox" value="" id="flexCheckDefault">
                     </div>
                   </td>
-                  <td>{{author.id}}</td>
                   <td>{{author.firstName}}</td>
                   <td>{{author.secondName}}</td>
                   <td>{{author.rating}}</td>
